Update plugin metadata and add copyright headers
Added copyright headers to all source files for 2025. Updated InstanceDirector.uplugin with new Marketplace URL, removed DocsURL, and set EngineVersion to 5.7.0. Added FilterPlugin.ini for resource filtering. Removed FAB_LISTING.md and license section from README.md.

--- a/InstanceDirector.uplugin
+++ b/InstanceDirector.uplugin
@@ -7,9 +7,10 @@
 	"Category": "Code Plugins",
 	"CreatedBy": "SiddarthaG",
 	"CreatedByURL": "",
-	"DocsURL": "https://github.com/sidunrealde/InstanceDirector/blob/main/DEVELOPER_GUIDE.md",
-	"MarketplaceURL": "",
+	"DocsURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/78150eb2-806b-43d9-9347-b2fca2ee150c",
 	"SupportURL": "",
+	"EngineVersion": "5.7.0",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
